Increase header logo size and fix footer logo visibility with white filter

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .logo-image {
-    height: 60px;
+    height: 80px;
     width: auto;
     display: block;
     transition: var(--transition);
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .main-nav.scrolled .logo-image {
-    height: 50px;
+    height: 70px;
 }
 
 .nav-menu {
